--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
   <properties>
     <java.version>1.8</java.version>
     <springframework.version>5.2.0.M2</springframework.version>
+    <mapstruct.version>1.3.0.Final</mapstruct.version>
   </properties>
 
   <dependencies>
@@ -92,6 +93,13 @@
       <artifactId>lombok</artifactId>
       <optional>true</optional>
     </dependency>
+    <dependency>
+      <groupId>org.mapstruct</groupId>
+      <artifactId>mapstruct-jdk8</artifactId>
+      <version>${mapstruct.version}</version>
+    </dependency>
+
+
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-test</artifactId>
@@ -197,6 +205,11 @@
           <source>${java.version}</source>
           <target>${java.version}</target>
           <annotationProcessorPaths>
+            <path>
+              <groupId>org.mapstruct</groupId>
+              <artifactId>mapstruct-processor</artifactId>
+              <version>${mapstruct.version}</version>
+            </path>
             <path>
               <groupId>org.projectlombok</groupId>
               <artifactId>lombok</artifactId>
