fetch album with artist

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.banner.location=classpath:/banner.txt
 
 spring.application.name=MusicLibrary
 
-
+spring.jackson.default-property-inclusion = NON_NULL
 # Monitoring
 #
 management.server.port: 8081
